Fixed login alignment in header

--- a/RockWeb/Themes/church_ccv_External_v8/Styles/theme.css
+++ b/RockWeb/Themes/church_ccv_External_v8/Styles/theme.css
@@ -10467,7 +10467,7 @@ html,body{
 /* sytle for login block*/
 .loginstatus {
     float: left;
-    padding: 8px 2px 0px 2px;
+    padding: 7px 2px 0px 2px;
     color: #FFFFFF;
     font-family: akrobat;
     font-weight: bold;
